# rust-operator

./: .gitignore  Cargo.toml
deployment/: crd.yaml
src/: main.rs
